--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "angular": "^1.6.5",
     "jquery": "^3.2.1",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular-ui-select": "^0.19.8",
+    "angular-sanitize": "^1.6.5"
   }
 }
